clusters/apps/env/production/auth-system/oauth2-proxy/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: google-auth
spec:
  forwardAuth:
    address: https://sso.${FAMILY_DOMAIN}
    trustForwardHeader: true
  headers:
    customRequestHeaders:
      sslRedirect: "true"
      stsSeconds: "315360000"
      browserXssFilter: "true"
      contentTypeNosniff: "true"
      forceSTSHeader: "true"
      sslHost: "${FAMILY_DOMAIN}"
      stsIncludeSubdomains: "true"
      stsPreload: "true"
      frameDeny: "true"
  errors:
    status:
      - "401-403"
    service:
      name: google-auth-oauth2-proxy.auth-system.svc.cluster.local
      port: 80
    query: "/oauth2/sign_in"
