clusters/apps/env/production/auth-system/oauth2-proxy/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: google-auth
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: sso.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`sso.${FAMILY_DOMAIN}`)"
      services:
        - name: google-auth-oauth2-proxy
          port: 80
      middlewares:
        - name: oauth-headers
          namespace: auth-system
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: sso.${FAMILY_DOMAIN}
